<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indigosdk</name>
  <version>1.0.0</version>
  <description>indigosdk for Occam 60 camera</description>
  <maintainer email="damien.vivet@gmail.com">damien</maintainer>
  <license>Boost Software License</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
